# Split-and-Summarize-Text

./: SplitSummarizeProject.ipynb  SplitSummarizeProject.py  SplitSummarizeProject2.py  pyproject.toml
